; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_block_alloc.c_mysqlnd_mempool_resize_chunk.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_block_alloc.c_mysqlnd_mempool_resize_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i8*, i64 }

@.str = private unnamed_addr constant [29 x i8] c"mysqlnd_mempool_resize_chunk\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_4__*, i8*, i64, i64)* @mysqlnd_mempool_resize_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mysqlnd_mempool_resize_chunk(%struct.TYPE_4__* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = call i32 @DBG_ENTER(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %12 = load i8*, i8** %7, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = icmp eq i8* %12, %15
  br i1 %16, label %17, label %42

17:                                               ; preds = %4
  %18 = load i64, i64* %9, align 8
  %19 = call i64 @ZEND_MM_ALIGNED_SIZE(i64 %18)
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = inttoptr i64 %24 to i8*
  %26 = load i8*, i8** %7, align 8
  %27 = ptrtoint i8* %25 to i64
  %28 = ptrtoint i8* %26 to i64
  %29 = sub i64 %27, %28
  %30 = icmp sle i64 %19, %29
  br i1 %30, label %31, label %42

31:                                               ; preds = %17
  %32 = load i8*, i8** %7, align 8
  %33 = load i64, i64* %9, align 8
  %34 = call i64 @ZEND_MM_ALIGNED_SIZE(i64 %33)
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  store i8* %35, i8** %39, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = call i32 @DBG_RETURN(i8* %40)
  br label %42

42:                                               ; preds = %31, %17, %4
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  %45 = load i64, i64* %9, align 8
  %46 = call i8* @zend_arena_alloc(%struct.TYPE_5__** %44, i64 %45)
  store i8* %46, i8** %10, align 8
  %47 = load i8*, i8** %10, align 8
  %48 = load i8*, i8** %7, align 8
  %49 = load i64, i64* %8, align 8
  %50 = load i64, i64* %9, align 8
  %51 = call i32 @MIN(i64 %49, i64 %50)
  %52 = call i32 @memcpy(i8* %47, i8* %48, i32 %51)
  %53 = load i8*, i8** %10, align 8
  store i8* %53, i8** %7, align 8
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  store i8* %53, i8** %55, align 8
  %56 = load i8*, i8** %7, align 8
  %57 = call i32 @DBG_RETURN(i8* %56)
  %58 = load i8*, i8** %5, align 8
  ret i8* %58
}

declare dso_local i32 @DBG_ENTER(i8*) #1

declare dso_local i64 @ZEND_MM_ALIGNED_SIZE(i64) #1

declare dso_local i32 @DBG_RETURN(i8*) #1

declare dso_local i8* @zend_arena_alloc(%struct.TYPE_5__**, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @MIN(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
